syntax = "proto2";

package hdfs;

option java_package = "ds.hdfs";
option java_outer_classname = "getResponseProto";

message getResponse{
 required bytes data = 1;
 required string filename = 2;
}
